# qqpet_automation

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  config.yaml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  compatibility.yml  config.yml  feature_request.yml
.github/workflows/: build-macos.yml  build.yml
docs/superpowers/specs/: 2026-04-07-qq-pet-openclaw-skill-design.md
qq-pet-macos/: main.js  package-lock.json  package.json
qq-pet-macos/src/ini/: dataWatcher.js  doMain.js  root.js  screen.js  store.js  sys.js
qq-pet-macos/src/service/: config.js  focusGuard.js  llm.js  request.js
qq-pet-macos/src/service/model/: user.js
qq-pet-macos/src/windows/: app.html  window.js
qq-pet-macos/src/windows/main/: index.css  index.js  indexOnline.html  main.js  menu.js  preload.js  shortcuts.js
qq-pet-macos/src/windows/model/: index.css  index.html  index.js  preload.js
qq-pet-macos/src/windows/util/: aes.js  file.js  localstorge.js  move.js
qq_pet_asar/: main.js  package.json
qq_pet_asar/src/ini/: doMain.js  init.js  pet.js  root.js  safe.js  store.js  sys.js  tool.js
qq_pet_asar/src/service/: config.js  websocket.js
qq_pet_asar/src/service/model/: user.js
qq_pet_asar/src/windows/: app.html  window.js
qq_pet_asar/src/windows/main/: Notification.js  clip.js  index.html  main.js  menu.js  shortcuts.js
skills/qq-pet/: SKILL.md
src/qq_pet/: __main__.py  actions.py  cli.py  game_data.py  models.py  pet_client.py  store_reader.py
tests/: test_pet_client.py  test_store_reader.py
(+96 files in other folders)
